# advoi-system

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.api  Dockerfile.voice  Dockerfile.web  README.md  compose.www.yml  docker-compose.yml  package.json  pyproject.toml  shelve.json
.aether/: BET.md  DECISIONS.md  EVENTS.md  README.md  STAGE.md  VERSION
advoi/: __init__.py  cli.py  config.py  copy_style.py
deploy/: .env.local.example  .env.staging.example  .env.www.live.example  .env.www.staging.example  docker-compose.letta.yml  docker-compose.staging.yml  docker-compose.www.yml  livekit.yaml  otel-collector-config.yaml  port-registry-entry.md
docs/: CLARITY-FRAMEWORK.md  HERMES-COST-OPTIMIZATION.md  LETTA-OPTIONAL.md  MEMORY-STACK.md  PLAN-SETUP-REVIEW.md  PORTFOLIO-INTEGRATION.md  README.md  SOURCE-MATERIALS.md  VERSIONS.md  VPS-SETUP.md
scripts/: aether-bootstrap.sh  aether-feed-cron.sh  aether-gate-export.sh  aether-gate-with-pel.sh  aether-publish-atomic.sh  agents-smoke-test.ps1  agents-smoke-test.sh  bootstrap-local-env.ps1  bootstrap-local-env.sh  capture-latency-baseline.sh  check-keys-remote.sh  emit-gate-snapshot-pel.py  ensure-deploy-secrets.sh  fm-aether-gate-pel-hook.sh  fm-bridge.sh  generate-pwa-icons.py  hindsight-bridge.py  memory-events-retention.py  memory-events-retention.sh  memory-health.sh  memory-setup-hindsight.sh  memory-setup-letta.sh  orchestrate-6-once.ps1  orchestrate-agents.ps1  port-registry-apply.sh  preload-staging-e2e.ps1  preload-staging-e2e.sh  push-shelve-openai-fix.sh  repair-vps-env.sh  run-agents-uv.ps1  run-agents-uv.sh  run-local-test-stack.ps1  run-local-test-stack.sh  run-multi-agent-stack.ps1  run-six-agents.ps1  run-stage1-setup.sh  seed-advoi-briefs.sh  seed-local-briefs.py  setup-vps-deploy-key.sh  shelve-push-staging.sh  (+16 more)
tests/: bash_util.py  conftest.py  test_aether_feed_cron.py  test_aether_frame_hook.py  test_aether_gate_artifacts.py  test_aether_gate_chip.py  test_aether_gate_export.py  test_aether_portfolio.py  test_aether_proactive_schema.py  test_aether_publish_atomic.py  test_agent_bootstrap.py  test_agent_cache.py  test_agent_control.py  test_agent_slices.py  test_agent_supervisor.py  test_api.py  test_brief_curator_canonical.py  test_capabilities.py  test_confirm_parity.py  test_copy_style.py  test_error_recovery.py  test_execution_context_registry.py  test_fleet_idempotency.py  test_fleet_snapshot.py  test_fleet_trigger.py  test_frames.py  test_guardian_auto_restart.py  test_guardian_confirmation.py  test_guardian_notifications.py  test_guardian_trace_id.py  test_ingest_ui_lifecycle.py  test_ingestion.py  test_ingestion_lifecycle.py  test_ingestion_triage.py  test_intent.py  test_memory.py  (+33 more)
(+335 files in other folders)
