[project]
name = "advoi"
version = "0.1.0"
description = "Voice-first personal AI operating system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ADVoi" }]

dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
voice = [
    "livekit>=0.17",
    "livekit-agents>=0.12",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
advoi = "advoi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["advoi"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]